--- a/src/admin/assets/css/admin_styles.css
+++ b/src/admin/assets/css/admin_styles.css
@@ -272,8 +272,8 @@ p
 {
 	width:100%;
 	height:90px;
-	background-color: #396fa9;
-	border-bottom:2px solid #f0c330;
+	background-color: #89d2f5;
+	border-bottom:2px solid #89d2f5;
 	color:#fff;
 }
 #wrapper
@@ -346,8 +346,9 @@ p
 {
 	display:block;
 	margin:0;
-	float:left;
-	padding-left:20px;
+	position: absolute;
+	top:23px;
+	left:20px;
 }
 #logo a, #logo a:visited
 {
