--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
 @import "helpers/variables";
-@import "helpers/utilities";
 @import "helpers/functions";
 @import "helpers/mixins";
+@import "helpers/utilities";
+@import "helpers/overrides";
 
 @import "../../../bower_components/foundation/scss/foundation/components/grid";
 @import "layout/grid";
@@ -17,7 +18,10 @@
 
 @import "pages/styleguide";
 
-@import "modules/navigation";
+@import "modules/arrows";
 @import "modules/buttons";
 @import "modules/forms";
 @import "modules/icons";
+@import "modules/statements";
+@import "modules/nav-header";
+@import "modules/nav-secondary";
