--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -32,6 +32,12 @@
 %font-display {
     font-family: 'Montserrat';
 }
+%reversed {
+    color: $color-reverse-heading;
+}
+.reversed {
+    @extend %reversed;
+}
 
 /*-----------------------
   @LINKS
@@ -156,6 +162,31 @@
 /*-----------------------
   @IMAGES
 ------------------------*/
+.polaroid {
+
+    &:after {
+        @include bp($tablet) {
+            content: '';
+            border-radius: 100%;
+            bottom: 3%;
+            box-shadow: 0 0 40px rgba(0, 0, 0, 1);
+            height: 30%;
+            left: 10%;
+            position: absolute;
+            right: 10%;
+            width: 80%;
+            z-index: 1;
+        }
+    }
+    img {
+        border: 6px solid #fff;
+        box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+        position: relative;
+        width: 100%;
+        z-index: 2;
+    }
+}
+
 .polaroid--round {
     img {
         @include circle(100%, 292px);
