--- a/src/public/sass/layout/_page.scss
+++ b/src/public/sass/layout/_page.scss
@@ -54,6 +54,12 @@
 /*-----------------------
   @INSTALLING
 ------------------------*/
+.installing {
+    background-image: url('../images/installing-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .centered-half {
     @extend %centered;
     padding: $row-padding-vertical $row-padding-horizontal;
@@ -85,28 +91,49 @@
     max-width: 660px;
     width: 100%;
 
+    .new:after {
+        @include circle(100%, 60px);
+        background: $color-grey-light-bg;
+        border: 3px solid $color-reverse-heading;
+        box-shadow: 0 1px 5px 0 rgba(50,50,50,.25);
+        content: 'NEW';
+        display: block;
+        height: 60px;
+        left: 3%;
+        line-height: 3.5;
+        position: absolute;
+        top: 15%;
+        width: 60px;
+        z-index: 30;
+    }
+    .old:after {
+        @include circle(100%, 60px);
+        background: $color-grey-light-bg;
+        border: 3px solid $color-reverse-heading;
+        box-shadow: 0 1px 5px 0 rgba(50,50,50,.25);
+        content: 'OLD';
+        display: block;
+        height: 60px;
+        line-height: 3.5;
+        right: 5%;
+        position: absolute;
+        top: 67%;
+        width: 60px;
+        z-index: 30;
+    }
     .statement-image {
         border: 5px solid $color-reverse-heading;
         box-shadow: 0 1px 7px 0 rgba(50,50,50,.25);
         height: 300px;
         margin: 0 10px;
         position: relative;
-        
-        &.old:after {
-            background: $color-grey-light;
-            content: '';
-            display: block;
-            height: 60px;
-            left: 0;
-            position: absolute;
-            top: 100px;
-            width: 60px;
-            z-index: 30;
-        }
     }
 }
 
-.installation {
+.replacing {
+    background-image: url('../images/replacing-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding-bottom: 20%;
     
     .first {
@@ -136,9 +163,12 @@
 }
 
 .after-installation {
+    background-image: url('../images/after-installing-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 
     .brochure {
-        bottom: -320px;
+        bottom: -420px;
         position: absolute;
         right: 0;
         z-index: 20;
@@ -155,4 +185,46 @@
         padding: 0 1%;
     }
 
+}
+
+/*-----------------------
+  @PRODUCTS
+------------------------*/
+.products {
+    background-image: url('../images/products-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.product-category-wrapper {
+    overflow: hidden;
+    padding: 4% 0;
+    text-align: center;
+
+    h5 {
+        text-transform: none;
+    }
+}
+.product-category {
+    float: left;
+    padding: {
+        left: 2%;
+        right: 2%;
+    }
+    width: 33%;
+
+    h5 {
+        margin: {
+            bottom: 1%;
+            top: 10%;
+        }
+    }
+    p {
+        margin-top: 5px;
+    }
+}
+
+.accessories {
+    padding: 5% 0;
+    text-align: center;
 }
