--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -27,3 +27,5 @@
 @import "modules/statements";
 @import "modules/nav-header";
 @import "modules/nav-secondary";
+@import "modules/welcome";
+@import "modules/discover-more";
