--- a/src/admin/assets/css/admin_styles.css
+++ b/src/admin/assets/css/admin_styles.css
@@ -961,7 +961,10 @@ a.manual_upload_file_selected
 	width:48%;
 	padding-right:2%;
 }
-
+.form_spacer {
+	display:block;
+	height:30px;
+}
 
 /****************************************   MOBILE  *****************************************************/
 
