finished laying out markup for all pages except contact, why-skylights, and individual product; created mobile and tablet footer; worked on welcome area of homepage

--- a/src/public/sass/helpers/_overrides.scss
+++ b/src/public/sass/helpers/_overrides.scss
@@ -32,3 +32,32 @@
 .no-underline {
     @extend %no-underline;
 }
+
+/*-----------------------
+  @DEVICES
+------------------------*/
+.mobile {  
+    @include bp($mobile-landscape) {
+        display: none;
+    }
+}
+
+.tablet-only {
+    @include bp($foundation-small, $tablet) {
+        display: none;
+    }
+    @include bp($switch-nav-medium) {
+        display: none;
+    }
+}
+.tablet-up {
+    @include bp($switch-nav-medium) {
+        display: none;
+    }
+}
+
+.desktop {
+    @include bp($foundation-small, $switch-nav-medium) {
+        display: none;
+    }
+}
