--- a/src/public/sass/layout/_page.scss
+++ b/src/public/sass/layout/_page.scss
@@ -28,12 +28,6 @@
 .page-row {
     @extend %page-row;
 }
-.page-row--extra-tall {
-    padding: {
-        bottom: 13%;
-        top: 13%;
-    }
-}
 .page-row--snug {
     padding: {
         left: 5%;
@@ -50,6 +44,12 @@
     padding: {
         bottom: 10%;
         top: 10%;
+    }
+}
+.page-row--extra-tall {
+    padding: {
+        bottom: 13%;
+        top: 13%;
     }
 }
 
@@ -88,17 +88,47 @@
     }
 }
 
-.text-columns {
-
-    @include bp($tablet) {
-        columns: 2;
-        column-gap: 3em;
-    }
-}
-
 /*-----------------------
   @HOMEPAGE
 ------------------------*/
+
+/*-----------------------
+  @ABOUT
+------------------------*/
+.about-velux {
+    div {
+        padding: 5% 0;
+    }
+}
+.about-dealer {
+    overflow: hidden;
+
+    @include bp($foundation-small, $foundation-med) {
+        padding-bottom: 260px;
+
+        .about-dealer-title {
+            text-align: center;
+        }
+
+        img {
+            bottom: 18px;
+            float: none;
+            left: 50%;
+            position: absolute;
+            transform: translateX(-50%);
+        }
+    }
+    img {
+        float: right;
+    }
+}
+.our-principles {
+    header {
+        p {
+            font-size: 1.15em;
+        }
+    }
+}
 
 /*-----------------------
   @INSTALLING
