--- a/src/public/sass/modules/_nav-header.scss
+++ b/src/public/sass/modules/_nav-header.scss
@@ -7,21 +7,12 @@
     top: $masthead-height + $masthead-border;
     width: 100%;
 
-    @include bp($tablet) {
-        background: transparent;
-        display: block;
-        float: left;
-        margin-left: 2%;
-        position: relative;
-        top: 0;
-        width: auto;
-    }
-    @include bp($switch-nav-large) {
-        width: 75.705%;
-    }
-
     .nav-header--is-open & {
         display: block;
+
+        @include bp($foundation-small, $tablet) {
+            background: $color-grey-dark;
+        }
     }
 
     .nav-major {
@@ -37,6 +28,12 @@
         .nav-header__link {
             display: block;
             line-height: 4em;
+
+            .nav-header--is-open & {
+                @include bp($foundation-small, $tablet) {
+                    color: $color-reverse-heading;
+                }
+            }
 
             @include bp($tablet) {
                 display: inline-block;
@@ -58,20 +55,6 @@
             display: none;
             z-index: 20;
 
-            @include bp($tablet) {
-                background: $color-grey-dark;
-                border-top: $masthead-border solid $color-secondary;
-                display: none;
-                left: 50%;
-                line-height: 70px;;
-                max-width: $page-max-width;
-                position: fixed;
-                width: 100%;
-                text-align: center;
-                top: $masthead-height;
-                transform: translate(-50%, 0);
-            }
-
             a {
                 color: $color-grey-light;
                 display: block;
@@ -88,6 +71,20 @@
             .subnav-products--is-open & {
                 display: block;
             }
+            
+            @include bp($tablet) {
+                background: $color-grey-dark;
+                border-top: $masthead-border solid $color-secondary;
+                display: none;
+                left: 50%;
+                line-height: 70px;;
+                max-width: $page-max-width;
+                position: fixed;
+                width: 100%;
+                text-align: center;
+                top: $masthead-height;
+                transform: translate(-50%, 0);
+            }
         }
         .products-dropdown {
             display: inline-block;
@@ -98,6 +95,9 @@
             margin: 0 auto;
             text-transform: none;
 
+            @include bp($foundation-small, $tablet) {
+                text-transform: uppercase;
+            }
             @include bp($tablet) {
                 margin: {
                     left: 5px;
@@ -119,18 +119,6 @@
     .nav-minor {
         display: none;
         z-index: 10;
-
-        @include bp($tablet, $switch-nav-large) {
-            background: #fff;
-            left: 0;
-            position: fixed;
-            top: $masthead-height + $masthead-border;
-            width: 100%;
-        }
-        @include bp($switch-nav-large) {
-            display: block;
-            float: right;
-        }
 
         .nav-header__link {
             color: $color-grey-light;
@@ -165,5 +153,30 @@
         .nav-header--is-open & {
             display: block;
         }
+
+        @include bp($tablet, $switch-nav-large) {
+            background: #fff;
+            left: 0;
+            position: fixed;
+            top: $masthead-height + $masthead-border;
+            width: 100%;
+        }
+        @include bp($switch-nav-large) {
+            display: block;
+            float: right;
+        }
+    }
+
+    @include bp($tablet) {
+        background: transparent;
+        display: block;
+        float: left;
+        margin-left: 2%;
+        position: relative;
+        top: 0;
+        width: auto;
+    }
+    @include bp($switch-nav-large) {
+        width: 75.705%;
     }
 }
